[metadata]
name = stream_helper_utils
version = 0.0.0
author = Niko Bolg
author_email = nkbolg@gmail.com

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    aiogram==v3.0b6
    python-dotenv
    deta
    fastapi

[options.extras_require]
dev =
    flake8
    pylint
    pip-tools
    pylama
    black
    uvicorn[standard]

