[metadata]
name = pollbot
version = 0.0.0
author = Niko Bolg
author_email = nkbolg@gmail.com

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    aiogram==v3.0b7
    python-dotenv
    deta
    fastapi

[options.packages.find]
where=src

[options.extras_require]
dev =
    flake8
    pylint
    pip-tools
    pylama
    black
    uvicorn[standard]

